2008-12-19   <> 

	* Protocols/Irc/IrcProtocolManager.cs: Notices are not highlights and
	  incoming and outgoing notices always create a chat (when missing).
	  (closes trac bug #45)

2008-12-17   <> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented distinction of event and
	  normal messages. (closes trac ticket #66)

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Engine-IRC.mdp: Added po files to MonoDevelop projects.

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented new commands: /amsg
	  /anotice /ame. (closes trac ticket #109)
	
	  Fixed crash bug in /notice command. (closes trac ticket #108)
	
	  Fixed display bug in /msg #channel when being in the channel.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Sync person chats after re-enabling
	  them in OnConnected, else they don't get new messages. (closes trac bug
	  #99)

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Using LibraryCatalog now.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Kill threads we started when
	  disconnecting.

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Dispose all chats after quitting in
	  CommandQuit().

2008-08-05  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Colorize nicks in nick changes and
	  quit messages.

2008-08-04  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: _OnNickChange(): Nick changes now use
	  colored nicks.

2008-07-31  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Fixed /help command to spit out the
	  header in the session instead of the frontend manager directly.

2008-07-29  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Fixed resetting colors in messages
	  where clear control character is used. (thanks to Zhila for spotting
	  this)
